# depend_on_what_you_use

./: .bazelignore  .bazelrc  .buildifier.json  .clang-format  .clang-tidy  .gitattributes  .gitignore  .mdformat.toml  .pre-commit-config.yaml  BUILD  CONTRIBUTING.md  LICENSE  MODULE.bazel  README.md  REPO.bazel  WORKSPACE  all_tests.sh  aspect.bzl  bench.txt  debug.sh  defs.bzl  dependencies.bzl  dev_setup_step_1.bzl  dev_setup_step_2.bzl  dev_setup_step_3.bzl  extra_deps.bzl  foo  foo.txt  ggg.txt  mypy.ini  no_filter.txt  pyproject.toml  requirements.bzl  ruff.toml  setup_step_1.bzl  setup_step_2.bzl  setup_step_3.bzl  setup_step_4.bzl  test_basic.sh  test_full.sh  (+14 more)
examples/: .bazelrc  BUILD  MODULE.bazel  WORKSPACE  aspect.bzl  test.py
examples/basic_usage/: BUILD  README.md  lib.h  my_type.h  not_using_lib.h  use_lib.cpp  use_lib.h
examples/define_macros/: BUILD  README.md  main.cpp
examples/ignoring_includes/: BUILD  README.md  ignore_includes.json  use_transitive_headers.cpp  use_unavailable_headers.h
examples/ignoring_includes/support/: BUILD
examples/recursion/: BUILD  README.md  lib.h  use_lib.h
examples/rule_using_dwyu/: BUILD  README.md  bad_target.h  rule.bzl
examples/set_cpp_standard/: BUILD  README.md  cpp_lib.h  use_specific_cpp_standard.cpp  use_specific_cpp_standard.h
examples/skipping_targets/: BUILD  README.md  lib_b.h  use_broken_external_dependency.h  use_transitive_dep.h
examples/support/: external_targets.bzl
examples/support/external_targets/: BUILD  MODULE.bazel
examples/target_mapping/: BUILD  README.md  use_lib_c.cpp
examples/target_mapping/libs/: BUILD  c.h
examples/target_mapping/mapping/: BUILD
test/apply_fixes/: .bazelrc  BUILD  MODULE.bazel  README.md  execute_tests.py  execute_tests_impl.py  execution_logic.py  result.py  test_case.py  test_cli_dry_run_performs_no_change.py  test_cli_forward_args_to_buildozer.py  test_cli_use_custom_output_base.py  test_cli_utilize_bazel_info.py  test_cli_utilize_bazel_info_with_custom_compilation_mode.py  test_fail_on_missing_report_files.py  test_move_public_dependencies_which_should_be_private.py  test_remove_unused_dependency.py  test_remove_unused_private_dependency.py  test_remove_unused_public_dependency.py
test/apply_fixes/missing_dependency/: test_fail_on_ambiguous_dep_resolution.py  test_fail_on_invisible_dep.py  test_fail_on_unavailable_include.py  test_find_external_dependency.py  test_find_generated_code.py  test_suggest_missing_dep_and_implementation_dep.py  test_suggest_missing_dep_based_on_cquery.py  test_suggest_missing_dep_based_on_fallback_logic_using_header_file_name.py  test_suggest_missing_dep_for_binary.py  test_suggest_missing_dep_from_hdrs_and_srcs.py  test_suggest_missing_deps_for_virtual_includes.py  test_suggest_missing_implementation_dep.py
test/apply_fixes/needlessly_public_dependency/: test_move_deps_to_implementation_deps.py
test/apply_fixes/src/: test_case.py  test_execution.py
test/apply_fixes/tool_cli/: README.md  test_cli_dry_run_performs_no_change.py  test_cli_forward_args_to_buildozer.py  test_cli_use_custom_output_base.py  test_cli_utilize_bazel_info.py  test_cli_utilize_bazel_info_with_custom_compilation_mode.py  test_custom_search_path.py  test_dry_run_performs_no_change.py  test_fail_if_no_fix_option_is_provided.py  test_fail_on_missing_report_files.py  test_forward_args_to_buildozer.py  test_get_dwyu_reports_from_execution_log.py  test_no_python_import_all_repositories.py  test_use_custom_output_base.py  test_utilize_bazel_info.py  test_utilize_bazel_info_with_custom_compilation_mode.py
test/apply_fixes/unused_dependencies/: BUILD  README.md  main.cpp
test/apply_fixes/unused_dependency/: test_remove_unused_private_dep.py  test_remove_unused_public_dep.py
test/apply_fixes/workspace_template/: BUILD  aspect.bzl  using_lib_a.cpp  using_lib_b.cpp  using_lib_c.h
test/aspect/: .bazelrc  BUILD  MODULE.bazel  REAME.md  WORKSPACE  aspect.bzl  execute_tests.py  execute_tests_impl.py  execute_tests_utest.py  execution_logic.py  expected_result.py  expected_result_test.py  result.py  result_test.py  test.bzl  test_case.py  test_case_test.py  version.py  version_test.py
test/aspect/alias/: BUILD  README.md  a.h  b.h  test_invalid_dependency_through_alias.py  test_unused_dependency_through_alias.py  test_use_dependency_through_alias.py  use_a_and_b.cpp
test/aspect/allow_private_headers_from_deps/: BUILD  aspect.bzl  test_allow_using_private_hdrs.py  test_fail_on_using_private_hdrs.py  use_private_headers_from_deps.cpp  use_private_headers_from_deps.h
test/aspect/cc_toolchain_preprocessor/: BUILD  aspect.bzl  test_invalid_extern_usages.py  test_valid_usages.py  use_extern_invalid.cpp  use_extern_valid.cpp
test/aspect/command_length_limit/: BUILD  make_large_arg.bzl  test_command_length_limit.py
test/aspect/complex_defines/: BUILD  a.h  b.cpp  b.h  main.cpp  naughty.h
test/aspect/complex_includes/: BUILD  ext_repo.bzl  test_complex_includes.py  test_feature_external_include_paths.py  use_complex_includes.cpp
test/aspect/custom_config/: BUILD  aspect.bzl  extra_ignore_include_paths.json  full_custom_config.json  ignore_include_paths.json  ignore_include_patterns.json  test_custom_ignore_include_paths.py  test_extra_ignore_include_paths.py  test_ignore_include_patterns.py  test_include_not_covered_by_patterns.py  use_ignored_patterns.h
test/aspect/defines/: BUILD  README.md  defines_from_bazel_target.h  in_file_defines.h  include_using_pre_processor_token.h  test_1.py  test_2.py  test_3.py  test_4.py  test_5.py  test_command_line_defines.py  test_processing_defines.py  transitive_defines_from_bazel_target.h  use_command_line_defines.h  use_defines_from_dependency_header.h
test/aspect/duplicate_includes/: BUILD  test_duplicate_includes_failure.py  test_duplicate_includes_success.py  (+1 more)
test/benchmark/: .bazelrc  MODULE.bazel  aspect.bzl  bench_many_targets.py  bench_target_with_complex_code.py  bench_target_with_many_files.py  lib.py
test/workspace_integration/: .bazelrc  BUILD  MODULE.bazel  README.md  WORKSPACE  aspect.bzl  test.py
(+927 files in other folders)
