[tool.poetry]
name = "depend_on_what_you_use"
version = "0.0.0"
description = ""
authors = ["Martin Medler"]

[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.dev-dependencies]
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
