module(name = "dwyu_examples")

##
## Public part of the examples
##

bazel_dep(name = "depend_on_what_you_use", dev_dependency = True)
local_path_override(
    module_name = "depend_on_what_you_use",
    path = "../",
)

##
## The content below is required for using the examples as tests, but is not required for using DWYU
##

# Keep in sync with //examples/WORKSPACE
bazel_dep(name = "rules_python", version = "0.37.2", dev_dependency = True)

python = use_extension(
    "@rules_python//python/extensions:python.bzl",
    "python",
    dev_dependency = True,
)
python.toolchain(python_version = "3.8")

bazel_dep(name = "external_targets", dev_dependency = True)
local_path_override(
    module_name = "external_targets",
    path = "support/external_targets",
)

# Uncomment for testing exactly the versions required by DWYU without transitive dependencies or @bazel_tools
# influencing version resolution.
#single_version_override(module_name="rules_cc", version = "0.0.15")
#single_version_override(module_name="rules_python", version = "0.37.2")
#single_version_override(module_name="bazel_skylib", version = "1.7.1")
