module(name = "dwyu_examples")

bazel_dep(name = "depend_on_what_you_use", dev_dependency = True)
local_path_override(
    module_name = "depend_on_what_you_use",
    path = "../",
)

##
## One can use DWYU without the content below. We simply need some further things so all examples work.
##

bazel_dep(name = "external_targets", dev_dependency = True)
local_path_override(
    module_name = "external_targets",
    path = "support/external_targets",
)
