module(name = "dwyu_apply_fixes_integration_tests")

bazel_dep(name = "depend_on_what_you_use")
local_path_override(
    module_name = "depend_on_what_you_use",
    path = "../../",
)

# We specify by design outdated versions.
# bzlmod resolves dependencies to the maximum of all requested versions for all involved modules.
# Specifying an ancient version here gives us in the end at least whatever versions DWYU defines as dependency.
bazel_dep(name = "rules_python", version = "0.12.0")
bazel_dep(name = "rules_cc", version = "0.0.1")

# Deps unique to the tests
bazel_dep(name = "bazel_skylib", version = "1.9.0")

# We use the minimum required Python version for integration testing
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.10")

bazel_dep(name = "external_dep")
local_path_override(
    module_name = "external_dep",
    path = "missing_dependency/workspace/external_dep",
)
