module(name = "dwyu_workspace_integration_tests")

# Choose a custom name to prove we have no hard coded dependency on 'depend_on_what_you_use' being used as name.
bazel_dep(name = "depend_on_what_you_use", dev_dependency = True, repo_name = "custom_dwyu")
local_path_override(
    module_name = "depend_on_what_you_use",
    path = "../../",
)

# Specify an old version so the DWYU dependency determines what we actually get
bazel_dep(name = "rules_cc", version = "0.0.1")
