module(name = "mocked_toolchains_tests")

bazel_dep(name = "depend_on_what_you_use")
local_path_override(
    module_name = "depend_on_what_you_use",
    path = "../../../",
)

# We specify by design an outdated rules_python version.
# bzlmod resolves dependencies to the maximum of all requested versions for all involved modules.
# Specifying an ancient version here gives us in the at least end whatever rules_python version DWYU defines as dependency.
bazel_dep(name = "rules_python", version = "0.12.0")
bazel_dep(name = "test_toolchain_classic")
local_path_override(
    module_name = "test_toolchain_classic",
    path = "toolchains/classic",
)

bazel_dep(name = "test_toolchain_rule_based")
local_path_override(
    module_name = "test_toolchain_rule_based",
    path = "toolchains/rule_based",
)
