module(name = "test_toolchain_classic")

# We specify by design outdated versions.
# bzlmod resolves dependencies to the maximum of all requested versions for all involved modules.
# Specifying an ancient version here gives us in the end the version used by the root module which uses this
# sub module for test purposes.
bazel_dep(name = "rules_cc", version = "0.0.1")
bazel_dep(name = "bazel_skylib", version = "1.0.3")
